# agent-convergence-scorer

./: .gitignore  .hermes-seal.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  llms.txt  pyproject.toml  sbom.cdx.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: preview-source.txt  preview-spec.md
src/agent_convergence_scorer/: __init__.py  __main__.py  cli.py  scorer.py
tests/: test_cli.py  test_graceful_degrade.py  test_scorer.py
